# opensquat

./: Dockerfile  README.md  pyproject.toml  setup.py
examples/: opensquat.py
opensquat/: cli.py
opensquat.egg-info/: PKG-INFO
